--- a/src/css/common.css
+++ b/src/css/common.css
@@ -91,6 +91,13 @@
   .custom_zoomcontrol span:first-child {
     border-bottom: 1px solid #bfbfbf;
   }
-  .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
-  .wrap * {padding: 0;margin: 0;}
-  .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+  .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: fit-content;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5; z-index: 10 !important;}
+  .wrap .info {
+    background-color: #fff;
+    text-align: center;
+    padding: 1rem;
+
+  }
+  .wrap .info div {
+    margin: 0.5rem 0;
+  }
