--- a/src/css/common.css
+++ b/src/css/common.css
@@ -121,7 +121,7 @@
   }
   .info .adress {
     font-size: 0.8rem;
-    margin: 1rem 0;
+    margin: 1rem 0;;
   }
 
   .info .header {
@@ -141,4 +141,23 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
+  }
+
+  #myCenter {
+    position: absolute;
+    z-index: 99;
+    bottom: 2rem;
+    right: 0;
+    display: flex;
+    align-items: center;
+    width: 400px;
+    justify-content: space-around;
+  }
+  #myCenter > div {
+    background-color: #fff;
+    border-radius: 25px;
+    padding: 2rem;
+    border: 1px solid #9c9cc9;
+    box-sizing: border-box;
+    cursor: pointer;
   }
