--- a/src/css/common.css
+++ b/src/css/common.css
@@ -147,17 +147,18 @@
     position: absolute;
     z-index: 99;
     bottom: 2rem;
-    right: 0;
+    right: 2rem;
     display: flex;
     align-items: center;
-    width: 400px;
     justify-content: space-around;
   }
   #myCenter > div {
     background-color: #fff;
     border-radius: 25px;
-    padding: 2rem;
-    border: 1px solid #9c9cc9;
+    box-shadow: 0px 3px 10px #646464;
     box-sizing: border-box;
     cursor: pointer;
+    display: flex;
+    font-size: 2rem;
+    padding: .5rem;
   }
