--- a/src/css/common.css
+++ b/src/css/common.css
@@ -95,8 +95,7 @@
     position: relative;
     left: 0%;
     transform: translateY(-85%);
-    width: fit-content;
-    height: fit-content;
+    width: 20rem;
     font-size: 1rem;
     font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
     background-color: aqua;
@@ -120,8 +119,20 @@
     box-shadow:2px 1px 5px #b5b5b5;
   }
   .info .adress {
+    width: 100%;
+    padding: 1rem 0;
+    height: 2rem;
+  }
+  .info .adress p{
     font-size: 0.8rem;
-    margin: 1rem 0;;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .info .adress p:hover {
+    display: flex;
+    flex-wrap: wrap;
+    white-space: normal;
+    width: 100%;
   }
 
   .info .header {
