--- a/src/css/map.css
+++ b/src/css/map.css
@@ -9,8 +9,8 @@
   position: fixed;
   z-index: 2;
   left: 50%;
-  max-width: 500px;
-  width: 100%;
+  max-width: 400px;
+  width: 90%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   padding-top: 2rem;
@@ -31,7 +31,6 @@
   -webkit-box-shadow: 1px 1px 10px #9c9c9c;
           box-shadow: 1px 1px 10px #9c9c9c;
   border-radius: 15px;
-  max-width: 500px;
   width: 100%;
   height: 100%;
   z-index: 6;
@@ -51,21 +50,19 @@
   z-index: 5;
 }
 #container > div:nth-child(1) > div ul {
-  position: absolute;
-  max-height: 500px;
+  max-height: 20rem;
   overflow: scroll;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  margin: 0 auto;
+  -webkit-transform: translateY(10rem);
+          transform: translateY(10rem);
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
 #container > div:nth-child(1) > div ul li {
   border-bottom: 1px solid #6c6c6c;
-  padding: 1rem 3rem;
+  padding: 1rem 1rem;
+  font-size: 0.8rem;
 }
 #container > div:nth-child(1) > div ul li:first-child {
   border-top: 1px solid #6c6c6c;
