--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -8,8 +8,8 @@
         position: fixed;
         z-index: 2;
         left: 50%;
-        max-width: 500px;
-        width: 100%;
+        max-width: 400px;
+        width: 90%;
         transform: translateX(-50%);
         padding-top: 2rem;
   
@@ -26,7 +26,6 @@
             border: none;
             box-shadow: 1px 1px 10px #9c9c9c;
             border-radius: 15px;
-            max-width: 500px;
             width: 100%;
             height: 100%;
             z-index: 6;
@@ -47,18 +46,19 @@
           z-index: 5;
   
           ul {
-            position: absolute;
-            max-height: 500px;
+            max-height: 20rem;
             overflow: scroll;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            margin: 0 auto;
+            transform: translateY(10rem);
+            // top: 50%;
+            // left: 50%;
+            // transform: translate(-50%, -50%);
             width: fit-content;
   
             li {
               border-bottom: 1px solid #6c6c6c;
-              padding: 1rem 3rem;
+              padding: 1rem 1rem;
+              font-size: 0.8rem;
   
               &:first-child {
                 border-top: 1px solid #6c6c6c;
