--- a/src/css/map.css
+++ b/src/css/map.css
@@ -4,41 +4,78 @@
   display: flex;
 }
 #container > div:nth-child(1) {
-  display: block;
-  padding: 10px;
   position: fixed;
   z-index: 2;
-  left: 50%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+#container > div:nth-child(1) > div:nth-child(1) {
   max-width: 400px;
   width: 90%;
+  height: 3rem;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  padding-top: 2rem;
-}
-#container > div:nth-child(1) form {
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-  height: 3rem;
-}
-#container > div:nth-child(1) form input {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  border: none;
-  -webkit-box-shadow: 1px 1px 10px #9c9c9c;
-          box-shadow: 1px 1px 10px #9c9c9c;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 2rem;
   border-radius: 15px;
-  width: 100%;
-  height: 100%;
+  padding: 0 1rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 1px 1px 10px #6c6c6c;
+          box-shadow: 1px 1px 10px #6c6c6c;
   z-index: 6;
+}
+#container > div:nth-child(1) > div:nth-child(1) > form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#container > div:nth-child(1) > div:nth-child(1) > form > input {
+  border: none;
   outline: none;
+  height: 48px;
+  width: 100%;
   text-align: center;
+  margin: 0 auto;
   font-size: 1.5rem;
 }
-#container > div:nth-child(1) > div {
+#container > div:nth-child(1) > div:nth-child(1) > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 20%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 2.5rem;
+  margin-right: 1rem;
+  position: relative;
+  cursor: pointer;
+}
+#container > div:nth-child(1) > div:nth-child(2) {
   position: fixed;
   top: 0;
   left: 50%;
@@ -49,7 +86,7 @@
   height: 100vh;
   z-index: 5;
 }
-#container > div:nth-child(1) > div ul {
+#container > div:nth-child(1) > div:nth-child(2) > ul {
   max-height: 20rem;
   overflow: scroll;
   margin: 0 auto;
@@ -58,25 +95,6 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-}
-#container > div:nth-child(1) > div ul li {
-  border-bottom: 1px solid #6c6c6c;
-  padding: 1rem 1rem;
-  font-size: 0.8rem;
-}
-#container > div:nth-child(1) > div ul li:first-child {
-  border-top: 1px solid #6c6c6c;
-}
-#container > div:nth-child(1) > div ul li:hover {
-  background-color: #333;
-  color: white;
-}
-#container #nav {
-  position: fixed;
-  top: 2rem;
-  left: 1rem;
-  z-index: 3;
-  font-size: 3rem;
 }
 
 .ae {
