--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -1,85 +1,78 @@
 #container {
     display: flex;
-  
+
     > div {
       &:nth-child(1) {
-        display: block;
-        padding: 10px;
         position: fixed;
         z-index: 2;
-        left: 50%;
-        max-width: 400px;
-        width: 90%;
-        transform: translateX(-50%);
-        padding-top: 2rem;
-  
-        form {
-          width: 100%;
-          margin: 0 auto;
-          position: relative;
-          height: 3rem;
-          input {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border: none;
-            box-shadow: 1px 1px 10px #9c9c9c;
-            border-radius: 15px;
-            width: 100%;
-            height: 100%;
-            z-index: 6;
-            outline: none;
-            text-align: center;
-            font-size: 1.5rem;
-          }
-        }
-  
+        width: 100%;
+        top: 0;
+        left: 0;
         > div {
-          position: fixed;
-          top: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          background-color: #fff;
-          width: 100vw;
-          height: 100vh;
-          z-index: 5;
-  
-          ul {
-            max-height: 20rem;
-            overflow: scroll;
-            margin: 0 auto;
-            transform: translateY(10rem);
-            // top: 50%;
-            // left: 50%;
-            // transform: translate(-50%, -50%);
-            width: fit-content;
-  
-            li {
-              border-bottom: 1px solid #6c6c6c;
-              padding: 1rem 1rem;
-              font-size: 0.8rem;
-  
-              &:first-child {
-                border-top: 1px solid #6c6c6c;
+          &:nth-child(1) {
+            max-width: 400px;
+            width: 90%;
+            height: 3rem;
+            background-color:#fff;
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            justify-content: space-between;
+            top: 2rem;
+            border-radius: 15px;
+            padding: 0 1rem;
+            box-sizing: border-box;
+            box-shadow: 1px 1px 10px #6c6c6c;
+            z-index: 6;
+            > form {
+              width: 100%;
+              display: flex;
+              align-items: center;
+
+              > input {
+                border: none;
+                outline: none;
+                height: 48px;
+                width: 100%;
+                text-align: center;
+                margin: 0 auto;
+                font-size: 1.5rem;
               }
-  
-              &:hover {
-                background-color: #333;
-                color: white;
-              }
+            }
+            > div {
+              display: flex;
+              width: 20%;
+              justify-content: center;
+              font-size: 2.5rem;
+              margin-right: 1rem;
+              position: relative;
+              cursor: pointer;
+            }
+          }
+          &:nth-child(2) {
+            position: fixed;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #fff;
+            width: 100vw;
+            height: 100vh;
+            z-index: 5;
+
+            > ul {
+              max-height: 20rem;
+              overflow: scroll;
+              margin: 0 auto;
+              transform: translateY(10rem);
+              width: fit-content;
             }
           }
         }
       }
-    }
-  
-    #nav {
-      position: fixed;
-      top: 2rem;
-      left: 1rem;
-      z-index: 3;
-      font-size: 3rem;
     }
 }
 
