--- a/src/css/map.css
+++ b/src/css/map.css
@@ -88,13 +88,16 @@
 }
 #container > div:nth-child(1) > div:nth-child(2) > ul {
   max-height: 20rem;
-  overflow: scroll;
+  overflow-y: scroll;
   margin: 0 auto;
   -webkit-transform: translateY(10rem);
           transform: translateY(10rem);
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
+  scroll-behavior: smooth;
+}
+#container > div:nth-child(1) > div:nth-child(2) > ul li:hover {
+  background-color: black;
+  color: #fff;
 }
 
 .ae {
