--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -65,10 +65,19 @@
 
             > ul {
               max-height: 20rem;
-              overflow: scroll;
+              overflow-y: scroll;
               margin: 0 auto;
               transform: translateY(10rem);
-              width: fit-content;
+              width: 100%;
+              scroll-behavior: smooth;
+
+              li {
+
+                &:hover {
+                  background-color: black;
+                  color: #fff;
+                }
+              }
             }
           }
         }
