--- a/src/css/common.css
+++ b/src/css/common.css
@@ -199,18 +199,38 @@
   }
   .add-marker-container {
     width: 300px;
-    height: 500px;
+    height: fit-content;
     background-color: #fff;
     position: absolute;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -150%);
+    padding: 1rem;
   }
   .con-header {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
-  .add-marker-container  .con-header .close-btn {
-    font-size: 2rem;
-    cursor: pointer;
+  .con-header h1 {
+    font-size: 1.5rem;
+  }
+  .con-body {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 0.5rem;
+  }
+  .con-body a, .con-body button {
+    border: none;
+    border-radius: 5px;
+    background-color: #bbb;
+    font-size: 1.2rem;
+    padding: 0 2rem;
+    color: #fff;
+  }
+  .con-body a {
+    background-color: rgb(107, 162, 210);
+  }
+  .con-body a:hover {
+    background-color: rgb(89, 153, 209);
   }
