--- a/front/src/css/common.css
+++ b/front/src/css/common.css
@@ -95,7 +95,7 @@
     position: relative;
     left: 0%;
     transform: translateY(-78%);
-    width: 20rem;
+    width: 15rem;
     font-size: 1rem;
     font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
     border: 1px solid #ddd;
@@ -106,7 +106,7 @@
     position: absolute; 
     left: 50%; 
     transform: translateX(-50%);
-    bottom: -7%;
+    bottom: -12%;
      width: 33px;
      height: 18px;
      background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png');
@@ -134,7 +134,6 @@
   .info .adress {
     width: 100%;
     padding: 1rem 0;
-    height: 2rem;
   }
   .info .adress p{
     font-size: 0.8rem;
@@ -152,7 +151,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 0 1rem 0;
   }
   .info .header .close-btn {
     font-size: 2rem;
@@ -166,6 +164,9 @@
     justify-content: space-between;
     flex-direction: row-reverse;
     align-items: center;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
   }
   .sub-btn-area > div:nth-child(1) a{
     font-size: 1.8rem;
@@ -198,7 +199,7 @@
     left: 50%;
   }
   .add-marker-container {
-    width: 300px;
+    width: 15rem;
     height: fit-content;
     background-color: #fff;
     position: absolute;
